HelloUltraviolet/Fixtures/RejectedSource/Procedures/OverloadingDiagnosticsTable/Source/Main.uv
//! Rejected procedure specimen for the overloading diagnostic table surface.

public procedure overloadedDiagnostic(value: i32) -> i32 {
    return value
}

public procedure overloadedDiagnostic(value: i32) -> i32 {
    return value + 1
}
